# flights-search

./: .env  .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: algorithm.md  architecture.md  flight_search_algorithm.md  performance_analysis.md  sequence.md
src/: logger.py  main.py  ports.py
src/adapters/: __init__.py  flight_events_api.py
src/app/: config.py  main.py  routes.py  schemas.py
src/domain/: indexed_search.py  model.py  two_leg_indexed_search.py
src/services/: __init__.py  journey_search.py
tests/: conftest.py  test_config.py  test_indexed_search.py  test_integration.py  test_main.py  test_model.py
tests/integration/: events.json  test_integration.py
tests/unit/: test_config.py  test_flight_events_api.py  test_indexed_search.py  test_journey_search.py  test_main.py  test_model.py  test_two_leg_indexed_search.py
